--- a/index.html
+++ b/index.html
@@ -75,7 +75,26 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer">
+            <div class="future-section">
+                <h3 class="footer-title">Future</h3>
+                <p class="footer-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nobis dicta magnam qui facilis unde quibusdam sapiente beatae asperiores quidem.</p>
+                <p class="footer-description">Email : Khandokerrihat@gmail.com</p>
+                <p class="footer-description">Phone : 01964******</p>
+                <a href=""><img src="images/icons/fb.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/youtube.png" alt=""></a>
+            </div>
+            <div>
+                <h4 class="subs-title">Lets Subscribe</h4>
+                <form action="">
+                    <input type="email" name="email" id="email" placeholder="Your valid email">
+                    <!-- <button class="btn-secondary" type="submit">Submit</button> -->
+                    <button class="btn-third" type="submit">Submit</button>
+                    <!-- <input class="btn-third" type="submit" value="Submit"> -->
+                </form>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
